// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.tags OptGroup renders correctly 1`] = `
<div>
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
    style=""
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-selection__choice"
            title="jack"
            unselectable="on"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              jack
            </div>
            <span
              class="rc-select-selection__choice__remove"
            >
              <i
                class="rc-select-selection__choice__remove-icon"
              >
                ×
              </i>
            </span>
          </li>
          <li
            class="rc-select-selection__choice"
            title="foo"
            unselectable="on"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              foo
            </div>
            <span
              class="rc-select-selection__choice__remove"
            >
              <i
                class="rc-select-selection__choice__remove-icon"
              >
                ×
              </i>
            </span>
          </li>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px;"
    >
      <div
        style="overflow: auto;"
      >
        <ul
          class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            class=" rc-select-dropdown-menu-item-group"
          >
            <div
              class="rc-select-dropdown-menu-item-group-title"
              title="Manager"
            >
              Manager
            </div>
            <ul
              class="rc-select-dropdown-menu-item-group-list"
            >
              <li
                aria-selected="true"
                class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active rc-select-dropdown-menu-item-selected"
                role="option"
                unselectable="on"
              >
                Jack
              </li>
            </ul>
          </li>
          <li
            class=" rc-select-dropdown-menu-item-group"
          >
            <div
              class="rc-select-dropdown-menu-item-group-title"
              title="Engineer"
            >
              Engineer
            </div>
            <ul
              class="rc-select-dropdown-menu-item-group-list"
            >
              <li
                aria-selected="false"
                class="rc-select-dropdown-menu-item"
                role="option"
                unselectable="on"
              >
                yiminghe
              </li>
            </ul>
          </li>
          <li
            aria-selected="true"
            class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-selected"
            role="option"
            unselectable="on"
          >
            foo
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.tags OptGroup renders inputValue correctly 1`] = `
<div>
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
    style=""
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="rc-select-search__field"
                style="width: 0px;"
                value="foo"
              />
              <span
                class="rc-select-search__field__mirror"
              >
                foo 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px;"
    >
      <div
        style="overflow: auto;"
      >
        <ul
          class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active"
            role="option"
            style=""
            unselectable="on"
          >
            foo
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.tags OptGroup renders inputValue correctly 2`] = `
<div>
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
    style=""
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-selection__choice"
            title="foo"
            unselectable="on"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              foo
            </div>
            <span
              class="rc-select-selection__choice__remove"
            >
              <i
                class="rc-select-selection__choice__remove-icon"
              >
                ×
              </i>
            </span>
          </li>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="rc-select-search__field"
                style=""
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px;"
    >
      <div
        style="overflow: auto;"
      >
        <ul
          class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            class=" rc-select-dropdown-menu-item-group"
          >
            <div
              class="rc-select-dropdown-menu-item-group-title"
              title="Manager"
            >
              Manager
            </div>
            <ul
              class="rc-select-dropdown-menu-item-group-list"
            >
              <li
                aria-selected="false"
                class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active"
                role="option"
                style=""
                unselectable="on"
              >
                Jack
              </li>
            </ul>
          </li>
          <li
            class=" rc-select-dropdown-menu-item-group"
          >
            <div
              class="rc-select-dropdown-menu-item-group-title"
              title="Engineer"
            >
              Engineer
            </div>
            <ul
              class="rc-select-dropdown-menu-item-group-list"
            >
              <li
                aria-selected="false"
                class="rc-select-dropdown-menu-item"
                role="option"
                unselectable="on"
              >
                yiminghe
              </li>
            </ul>
          </li>
          <li
            aria-selected="true"
            class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-selected"
            role="option"
            style=""
            unselectable="on"
          >
            foo
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.tags allowClear renders correctly 1`] = `
<div
  class="rc-select rc-select-enabled rc-select-allow-clear"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <ul>
        <li
          class="rc-select-search rc-select-search--inline"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select.tags render render animation 1`] = `
<SelectTrigger
  defaultActiveFirstOption={true}
  dropdownMatchSelectWidth={true}
  dropdownMenuStyle={Object {}}
  dropdownStyle={Object {}}
  inputValue=""
  multiple={true}
  onDropdownVisibleChange={[Function]}
  onMenuDeselect={[Function]}
  onMenuSelect={[Function]}
  onPopupFocus={[Function]}
  options={Array []}
  prefixCls="rc-select"
  showAction={
    Array [
      "click",
    ]
  }
  showSearch={true}
  value={Array []}
  visible={false}
>
  <div
    className="rc-select rc-select-enabled"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup="true"
      className="rc-select-selection
            rc-select-selection--multiple"
      key="selection"
      role="combobox"
    >
      <div
        className="rc-select-selection__rendered"
      >
        <Animate
          animation={Object {}}
          component="ul"
          componentProps={Object {}}
          onAppear={[Function]}
          onEnd={[Function]}
          onEnter={[Function]}
          onLeave={[Function]}
          transitionAppear={false}
          transitionEnter={true}
          transitionLeave={true}
          transitionName="slide-up"
        >
          <li
            className="rc-select-search rc-select-search--inline"
            key="__input"
          >
            <div
              className="rc-select-search__field__wrap"
            >
              <input
                autoComplete="off"
                className="rc-select-search__field"
                onChange={[Function]}
                onKeyDown={[Function]}
                value=""
              />
              <span
                className="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </Animate>
      </div>
    </div>
  </div>
</SelectTrigger>
`;

exports[`Select.tags render truncates tags by maxTagCount 1`] = `
<div
  class="rc-select rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <ul>
        <li
          class="rc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="one"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            one
          </div>
          <span
            class="rc-select-selection__choice__remove"
          >
            <i
              class="rc-select-selection__choice__remove-icon"
            >
              ×
            </i>
          </span>
        </li>
        <li
          class="rc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="two"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            two
          </div>
          <span
            class="rc-select-selection__choice__remove"
          >
            <i
              class="rc-select-selection__choice__remove-icon"
            >
              ×
            </i>
          </span>
        </li>
        <li
          class="rc-select-selection__choice rc-select-selection__choice__disabled"
          style="user-select:none;-webkit-user-select:none"
          title="+ 1 ..."
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            + 1 ...
          </div>
        </li>
        <li
          class="rc-select-search rc-select-search--inline"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select.tags render truncates tags by maxTagCount and show maxTagPlaceholder 1`] = `
<div
  class="rc-select rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <ul>
        <li
          class="rc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="one"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            one
          </div>
          <span
            class="rc-select-selection__choice__remove"
          >
            <i
              class="rc-select-selection__choice__remove-icon"
            >
              ×
            </i>
          </span>
        </li>
        <li
          class="rc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="two"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            two
          </div>
          <span
            class="rc-select-selection__choice__remove"
          >
            <i
              class="rc-select-selection__choice__remove-icon"
            >
              ×
            </i>
          </span>
        </li>
        <li
          class="rc-select-selection__choice rc-select-selection__choice__disabled"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            <span>
              Omitted
            </span>
          </div>
        </li>
        <li
          class="rc-select-search rc-select-search--inline"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select.tags render truncates tags by maxTagCount and show maxTagPlaceholder function 1`] = `
<div
  class="rc-select rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <ul>
        <li
          class="rc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="one"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            one
          </div>
          <span
            class="rc-select-selection__choice__remove"
          >
            <i
              class="rc-select-selection__choice__remove-icon"
            >
              ×
            </i>
          </span>
        </li>
        <li
          class="rc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="two"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            two
          </div>
          <span
            class="rc-select-selection__choice__remove"
          >
            <i
              class="rc-select-selection__choice__remove-icon"
            >
              ×
            </i>
          </span>
        </li>
        <li
          class="rc-select-selection__choice rc-select-selection__choice__disabled"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            <span>
              1 values omitted
            </span>
          </div>
        </li>
        <li
          class="rc-select-search rc-select-search--inline"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select.tags render truncates tags by maxTagCount while maxTagCount is 0 1`] = `
<div
  class="rc-select rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <ul>
        <li
          class="rc-select-selection__choice rc-select-selection__choice__disabled"
          style="user-select:none;-webkit-user-select:none"
          title="+ 3 ..."
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            + 3 ...
          </div>
        </li>
        <li
          class="rc-select-search rc-select-search--inline"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select.tags render truncates values by maxTagTextLength 1`] = `
<div
  class="rc-select rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <ul>
        <li
          class="rc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="one"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            on...
          </div>
          <span
            class="rc-select-selection__choice__remove"
          >
            <i
              class="rc-select-selection__choice__remove-icon"
            >
              ×
            </i>
          </span>
        </li>
        <li
          class="rc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="two"
          unselectable="on"
        >
          <div
            class="rc-select-selection__choice__content"
          >
            tw...
          </div>
          <span
            class="rc-select-selection__choice__remove"
          >
            <i
              class="rc-select-selection__choice__remove-icon"
            >
              ×
            </i>
          </span>
        </li>
        <li
          class="rc-select-search rc-select-search--inline"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select.tags renders search value when not found 1`] = `
Array [
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="22"
            unselectable="on"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              22
            </div>
            <span
              class="rc-select-selection__choice__remove"
            >
              <i
                class="rc-select-selection__choice__remove-icon"
              >
                ×
              </i>
            </span>
          </li>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto"
      >
        <ul
          class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            1
          </li>
          <li
            aria-selected="true"
            class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active rc-select-dropdown-menu-item-selected"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            22
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`Select.tags renders unlisted item in value 1`] = `
Array [
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="3"
            unselectable="on"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              3
            </div>
            <span
              class="rc-select-selection__choice__remove"
            >
              <i
                class="rc-select-selection__choice__remove-icon"
              >
                ×
              </i>
            </span>
          </li>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto"
      >
        <ul
          class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            1
          </li>
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            2
          </li>
          <li
            aria-selected="true"
            class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active rc-select-dropdown-menu-item-selected"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            3
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`Select.tags use filterOption 1`] = `
Array [
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto"
      >
        <ul
          class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            Red
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;
